# disintegrate

./: .env  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: ci.yml  deploy-docs.yml  test-docs.yml
disintegrate/: Cargo.toml
disintegrate-macros/: Cargo.toml
disintegrate-macros/src/: event.rs  lib.rs  state_query.rs  symbol.rs
disintegrate-macros/src/event/: group.rs  stream.rs  utils.rs
disintegrate-macros/tests/: event.rs  state_query.rs
disintegrate-postgres/: Cargo.toml
disintegrate-postgres/src/: error.rs  event_store.rs  event_store.rs.orig  lib.rs  listener.rs  migrator.rs  snapshotter.rs  state_store.rs
disintegrate-postgres/src/event_store/: append.rs  append_BACKUP_34963.rs  append_BASE_34963.rs  append_REMOTE_34963.rs  insert_builder.rs  query.rs  query_builder.rs  sql_criteria_builder.rs  tests.rs
disintegrate-postgres/src/event_store/sql/: fn_event_store_begin_epoch.sql  fn_event_store_current_epoch.sql  idx_domain_ids.sql  idx_event_domain_identifiers.sql  idx_event_sequence_committed.sql  idx_event_sequence_domain_identifiers.sql  idx_event_sequence_type.sql  idx_event_type.sql  seq_event_event_id.sql  table_event.sql  table_event_sequence.sql
disintegrate-postgres/src/event_store/tests/: event_store.rs  state_store.rs
disintegrate-postgres/src/listener/: id_indexer.rs  tests.rs
disintegrate-postgres/src/listener/sql/: add_column_processing_until.sql  fn_notify_event_listener.sql  fn_update_event_listener.sql  idx_event_listener_event_types.sql  table_event_listener.sql  table_event_listener_status.sql  trigger_event_insert.sql  trigger_notify_event_listener.sql
disintegrate-postgres/src/snapshotter/: tests.rs
disintegrate-postgres/src/snapshotter/sql/: table_snapshot.sql
disintegrate-serde/: Cargo.toml
disintegrate-serde/src/: lib.rs  serde.rs
disintegrate-serde/src/serde/: avro.rs  json.rs  messagepack.rs  prost.rs  protobuf.rs
disintegrate/src/: decision.rs  domain_id.rs  domain_identifier.rs  event.rs  event_store.rs  identifier.rs  lib.rs  listener.rs  state.rs  state_store.rs  stream_query.rs  testing.rs  utils.rs
disintegrate/src/decision/: state.rs  state_store.rs
docs/: .gitignore  docusaurus.config.js  flake.nix  package.json
docs/docs/: decision.md  event_listeners.md  faq.md  intro.md  postgres.md  stream_query.md
docs/docs/developer_journey/: add_new_feature.md  cqrs_and_event_sourcing.md  developer_journey.md  event_storming.md  handle_concurrency_conflicts.md
examples/banking/: .env  Cargo.toml
examples/banking/src/: application.rs  domain.rs  main.rs
examples/banking/tests/: validation_query_test.js
examples/cart/: Cargo.toml
examples/cart/src/: cart.rs  event.rs  main.rs
examples/courses/: Cargo.toml  README.md  build.rs  docker-compose.yml
examples/courses/proto/: api.proto  event.proto
examples/courses/src/: application.rs  domain.rs  grpc.rs  lib.rs  main.rs  postgres.rs  read_model.rs  serde.rs
examples/courses/src/application/: commands.rs  queries.rs
examples/courses/src/domain/: course.rs  student.rs  subscription.rs  unsubscription.rs
examples/courses/tests/: course_api_insomnia_collection.json  subscriptions_concurrency_test.js  subscriptions_load_test.js
