[package]
name = "disintegrate-macros"
description = "Disintegrate macros. Not for direct use. Refer to the `disintegrate` crate for details."
version = "0.7.3"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[features]
never = []

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.80"
quote = "1.0.33"
syn = { version = "2.0.52", features = ["full"] }

[dev-dependencies]
disintegrate = { version = "0.7.3", path = "../disintegrate", features = ["macros"] }
