[package]
name = "disintegrate-macros"
description = "Disintegrate macros. Not for direct use. Refer to the `disintegrate` crate for details."
version = "3.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[features]
never = []

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }

[dev-dependencies]
disintegrate = { version = "3.0.0", path = "../disintegrate", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
