[package]
name = "disintegrate-postgres"
description = "Disintegrate PostgresDB implementation. Not for direct use. Refer to the `disintegrate` crate for details."
version = "1.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
listener = ["dep:tokio", "dep:tokio-util"]

[dependencies]
disintegrate = { version = "1.0.0", path = "../disintegrate" }
disintegrate-serde = { version = "1.0.0", path = "../disintegrate-serde" }
disintegrate-macros = { version = "1.0.0", path = "../disintegrate-macros" }
serde = "1.0.196"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
async-trait = "0.1.80"
futures = "0.3.30"
async-stream = "0.3.5"
thiserror = "1.0.61"
tokio = {version = "1.42.0", features = ["macros"], optional = true}
tokio-util = {version = "0.7.13", optional = true}
uuid = { version = "1.11.0", features = ["v3"] }
md-5 = "0.10.6"
paste = "1.0.14"

[dev-dependencies]
disintegrate-serde = { version = "1.0.0", path = "../disintegrate-serde", features = ["json"] }
