[package]
name = "disintegrate-postgres"
description = "Disintegrate PostgresDB implementation. Not for direct use. Refer to the `disintegrate` crate for details."
version = "4.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
listener = ["dep:tokio-util"]

[dependencies]
disintegrate = { version = "4.0.0", path = "../disintegrate" }
disintegrate-serde = { version = "4.0.0", path = "../disintegrate-serde" }
disintegrate-macros = { version = "4.0.0", path = "../disintegrate-macros" }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
async-trait = "0.1.89"
futures = "0.3.31"
async-stream = "0.3.6"
thiserror = "2.0.17"
tokio = {version = "1.49.0", features = ["macros"]}
tokio-util = {version = "0.7.18", optional = true}
uuid = { version = "1.19.0", features = ["v3"] }
md-5 = "0.10.6"
paste = "1.0.15"

[dev-dependencies]
disintegrate-serde = { version = "4.0.0", path = "../disintegrate-serde", features = ["json"] }

[package.metadata.docs.rs]
all-features = true
