[package]
name = "disintegrate-serde"
description = "Serialization and deserializaion library for Disintegrate event store. Not for direct use. Refer to the `disintegrate` crate for details."
version = "0.7.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
json = ["dep:serde_json"]
protobuf = ["dep:protobuf"]
prost = ["dep:prost"]
avro = ["dep:apache-avro"]
full = ["json", "protobuf", "avro", "prost"]

[dependencies]
thiserror = "1.0.55"
serde_json = { version = "1.0.108", optional = true }
serde = { version = "1.0.190", features = ["derive"] }
protobuf = { version = "3.3.0", optional = true }
apache-avro = { version = "0.14.0", optional = true }
prost = {version = "0.12.3", optional = true}
