[package]
name = "disintegrate-serde"
description = "Serialization and deserializaion library for Disintegrate event store. Not for direct use. Refer to the `disintegrate` crate for details."
version = "0.8.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
json = ["dep:serde_json"]
protobuf = ["dep:protobuf"]
prost = ["dep:prost"]
avro = ["dep:apache-avro"]
full = ["json", "protobuf", "avro", "prost"]

[dependencies]
thiserror = "1.0.61"
serde_json = { version = "1.0.113", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
protobuf = { version = "3.4.0", optional = true }
apache-avro = { version = "0.16.0", optional = true }
prost = {version = "0.12.6", optional = true}
