[package]
name = "disintegrate-serde"
description = "Serialization and deserializaion library for Disintegrate event store. Not for direct use. Refer to the `disintegrate` crate for details."
version = "2.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
json = ["dep:serde_json"]
protobuf = ["dep:protobuf"]
prost = ["dep:prost"]
avro = ["dep:apache-avro"]
messagepack = ["dep:rmp-serde"]
full = ["json", "protobuf", "avro", "prost"]

[dependencies]
thiserror = "2.0.11"
serde_json = { version = "1.0.138", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
protobuf = { version = "3.7.1", optional = true }
apache-avro = { version = "0.16.0", optional = true }
prost = {version = "0.13.5", optional = true}
rmp-serde = { version = "1.3.0", optional = true }


[package.metadata.docs.rs]
all-features = true
