[package]
name = "disintegrate"
description = "Disintegrate is a Rust library to build event-sourced applications."
version = "0.8.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md" 
license.workspace = true 

[features]
macros = ["disintegrate-macros"]
serde = ["disintegrate-serde"]
serde-json = ["serde", "disintegrate-serde/json"]
serde-avro = ["serde", "disintegrate-serde/avro"]
serde-prost = ["serde", "disintegrate-serde/prost"]
serde-protobuf = ["serde", "disintegrate-serde/protobuf"]

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.196", features = ["derive"] }
disintegrate-serde = { version = "0.8.0", path = "../disintegrate-serde", optional = true }
disintegrate-macros = { version = "0.8.0", path = "../disintegrate-macros", optional = true }
thiserror = "1.0.58"
mockall = "0.12.1"
paste = "1.0.14"
uuid = { version = "1.8.0", features = ["serde"] }
async-stream = "0.3.5"

[dev-dependencies]
assert2 = "0.3.14"
uuid = { version = "1.8.0", features = ["v4"] }
