[package]
name = "banking"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
disintegrate = { version = "2.1.0", path = "../../disintegrate", features = ["macros", "serde-json"] }
disintegrate-postgres = { version = "2.1.0", path = "../../disintegrate-postgres" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
anyhow = "1.0.94"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls" , "postgres" ] }
actix-web = "4.11.0"
