[package]
name = "cart"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
disintegrate = { version = "0.7.2", path = "../../disintegrate", features = ["macros", "serde-json"] }
disintegrate-postgres = { version = "0.7.2", path = "../../disintegrate-postgres" }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls" , "postgres" ] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.51"
dotenv = "0.15.0"
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.56"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
