[package]
name = "cart"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
disintegrate = { version = "2.0.0", path = "../../disintegrate", features = ["macros", "serde-json"] }
disintegrate-postgres = { version = "2.0.1", path = "../../disintegrate-postgres" }
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls" , "postgres" ] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.94"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
