[package]
name = "courses"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
disintegrate = {version = "2.0.0", path = "../../disintegrate", features = ["macros", "serde-prost"] }
disintegrate-postgres = { version = "2.0.1", path = "../../disintegrate-postgres", features = ["listener"] }
anyhow = "1.0.94"
async-trait = "0.1.80"
rust_decimal = "1.35.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls" , "postgres" ] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.12.3", features = ["gzip", "transport"] }
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
prost = {version = "0.13.5"}
dotenv = "0.15.0"
serde = "1.0.217"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
