[package]
name = "courses"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
disintegrate = { version = "4.0.0", path = "../../disintegrate", features = ["macros", "serde-prost"] }
disintegrate-postgres = { version = "4.0.0", path = "../../disintegrate-postgres", features = ["listener"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
rust_decimal = "1.39.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.14.2", features = ["gzip", "transport"] }
tonic-prost = "0.14.2"
tonic-health = "0.14.2"
tonic-reflection = "0.14.2"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
prost = { version = "0.14.1" }
dotenv = "0.15.0"
serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-prost-build = "0.14.2"
